kubernetes/ingresses/api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: transvirex-api
    namespace: production
spec:
    entryPoints:
        - web
        - websecure
    routes:
        - match: (Host(`transvirex.com`) || Host(`www.transvirex.com`)) && PathPrefix(`/api`)
          kind: Rule
          services:
              - name: transvirex-gateway
                namespace: production
                port: 3000
    tls:
        secretName: certs
