kubernetes/ingresses/frontend-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: transvirex-frontend
    namespace: production
spec:
    entryPoints:
        - web
        - websecure
    routes:
        - match: Host(`transvirex.com`) || Host(`www.transvirex.com`)
          kind: Rule
          services:
              - name: transvirex-frontend
                namespace: production
                port: 80
    tls:
        secretName: certs
