kubernetes/ingresses/kubernetes-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: k8s-dashboard
    namespace: kubernetes-dashboard
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`kubernetes.transvirex.com`)
          kind: Rule
          services:
              - name: kubernetes-dashboard
                namespace: kubernetes-dashboard
                port: 443
                scheme: https
                serversTransport: skip-verify
    tls:
        secretName: certs
