kubernetes/ingresses/pgadmin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: pgadmin
    namespace: production
spec:
    entryPoints:
        - web
    routes:
        - match: Host(`pgadmin.transvirex.com`)
          kind: Rule
          middlewares:
              - name: https-redirect
                namespace: production
          services:
              - name: pgadmin
                namespace: production
                port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: pgadmin-secure
    namespace: production
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`pgadmin.transvirex.com`)
          kind: Rule
          middlewares:
              - name: pgadmin-auth
                namespace: production
          services:
              - name: pgadmin
                namespace: production
                port: 80
    tls:
        secretName: certs
